Horizontal scrollbar mobile fix attempt

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,6 +71,7 @@
 
     body {
         overflow-x: hidden;
+        position: relative;
     }
 }
 
